
EX1_SRCS		= example1.cpp
EX2_SRCS		= example2.cpp
EX3_SRCS		= example3.cpp
EX4_SRCS		= example4.cpp
LISTTESTER_SRCS		= listtester.cpp
VECTORTESTER_SRCS	= vectortester.cpp
HASHTESTER_SRCS	= hashtester.cpp
HEAPTESTER_SRCS		= heaptester.cpp
STACKTESTER_SRCS	= stacktester.cpp
DEPTHTESTER_D_SRCS	= depthtester_d.cpp
DEPTHTESTER_U_SRCS	= depthtester_u.cpp
BREADTHTESTER_D_SRCS	= breadthtester_d.cpp
BREADTHTESTER_U_SRCS	= breadthtester_u.cpp
DIJKSTRATESTER_D_SRCS	= dijkstratester_d.cpp
DIJKSTRATESTER_U_SRCS	= dijkstratester_u.cpp
COMPLEXGRAPH_SRCS = complexgraph.cpp

bin_PROGRAMS		= example1 example2 example3 example4 listtester vectortester hashtester heaptester stacktester depthtester_d depthtester_u breadthtester_d breadthtester_u dijkstratester_d dijkstratester_u complexgraph
example1_SOURCES	= $(EX1_SRCS)
example2_SOURCES	= $(EX2_SRCS)
example3_SOURCES	= $(EX3_SRCS)
example4_SOURCES	= $(EX4_SRCS)
listtester_SOURCES	= $(LISTTESTER_SRCS)
vectortester_SOURCES	= $(VECTORTESTER_SRCS)
hashtester_SOURCES	= $(HASHTESTER_SRCS)
heaptester_SOURCES	= $(HEAPTESTER_SRCS)
stacktester_SOURCES	= $(STACKTESTER_SRCS)
depthtester_d_SOURCES	= $(DEPTHTESTER_D_SRCS)
depthtester_u_SOURCES	= $(DEPTHTESTER_U_SRCS)
breadthtester_d_SOURCES	= $(BREADTHTESTER_D_SRCS)
breadthtester_u_SOURCES	= $(BREADTHTESTER_U_SRCS)
dijkstratester_d_SOURCES	= $(DIJKSTRATESTER_D_SRCS)
dijkstratester_u_SOURCES	= $(DIJKSTRATESTER_U_SRCS)
complexgraph_SOURCES = $(COMPLEXGRAPH_SRCS)
