
SIMPLE_GRAPH_SRCS		= simple_graph.cpp
EX1_SRCS		= example1.cpp
EX2_SRCS		= example2.cpp
EX3_SRCS		= example3.cpp
EX4_SRCS		= example4.cpp
EX5_SRCS		= example5.cpp
DEPTHTESTER_D_SRCS	= depthtester_d.cpp
DEPTHTESTER_U_SRCS	= depthtester_u.cpp
BREADTHTESTER_D_SRCS	= breadthtester_d.cpp
BREADTHTESTER_U_SRCS	= breadthtester_u.cpp
DIJKSTRATESTER_D_SRCS	= dijkstratester_d.cpp
PRIMTESTER_U_SRCS	= primtester_u.cpp
KRUSKALTESTER_U_SRCS	= kruskaltester_u.cpp
SCCTESTER_D_SRCS	= scctester_d.cpp
DIJKSTRATESTER_U_SRCS	= dijkstratester_u.cpp
COMPLEXGRAPH_SRCS = complexgraph.cpp
TOPOSORTTESTER_SRCS = toposorttester.cpp
MAP_TILES_GRAPH_SRCS = maptilesgraph.cpp

bin_PROGRAMS		= simple_graph example1 example2 example3 example4 example5 depthtester_d depthtester_u breadthtester_d breadthtester_u dijkstratester_d primtester_u kruskaltester_u scctester_d dijkstratester_u complexgraph toposorttester maptilesgraph
simple_graph_SOURCES	= $(SIMPLE_GRAPH_SRCS)
example1_SOURCES	= $(EX1_SRCS)
example2_SOURCES	= $(EX2_SRCS)
example3_SOURCES	= $(EX3_SRCS)
example4_SOURCES	= $(EX4_SRCS)
example5_SOURCES	= $(EX5_SRCS)
depthtester_d_SOURCES	= $(DEPTHTESTER_D_SRCS)
depthtester_u_SOURCES	= $(DEPTHTESTER_U_SRCS)
breadthtester_d_SOURCES	= $(BREADTHTESTER_D_SRCS)

breadthtester_u_SOURCES	= $(BREADTHTESTER_U_SRCS)
#breadthtester_u_CPPFLAGS = -DDEBUG -gstabs

dijkstratester_d_SOURCES	= $(DIJKSTRATESTER_D_SRCS)
primtester_u_SOURCES	= $(PRIMTESTER_U_SRCS)
kruskaltester_u_SOURCES	= $(KRUSKALTESTER_U_SRCS)
scctester_d_SOURCES	= $(SCCTESTER_D_SRCS)
dijkstratester_u_SOURCES	= $(DIJKSTRATESTER_U_SRCS)

complexgraph_SOURCES 	= $(COMPLEXGRAPH_SRCS)
#complexgraph_CPPFLAGS	= -DDEBUG

toposorttester_SOURCES	= $(TOPOSORTTESTER_SRCS)

maptilesgraph_SOURCES = $(MAP_TILES_GRAPH_SRCS)
